# axum-fullstack

./: .env.example  Cargo.toml
src/: controller.rs  main.rs  router.rs  server.rs
src/endpoints/: mod.rs
src/endpoints/users/: mod.rs  model.rs  router.rs
test_collections/axum example/: auth.bru  bruno.json  get user info.bru
web/: package-lock.json  package.json
web/src/: App.vue  main.ts
