[package]
name = "axum-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
