[package]
name = "axum-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std-native-tls", "chrono"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
